--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
         
-        <img src="imagens/bugdroid.png" alt="Bug Droid">
+        <img src="imagens/bugdroid.png" alt="Bug Droid" class="bugdroid">
 
         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
         </article>
@@ -59,7 +59,7 @@
             </ol>
 
             <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
-             <p>Acesse aqui o site <span>Android History</span> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+             <p id="historia">Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank"><span>Android History</span></a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </article>
         </aside>
 
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+        <p>Site criado por Carlos Junior para o CursoemVideo.</p>
     </footer>
 </body>
 </html>
